# yaxpeax-x86

./: CHANGELOG  Cargo.toml  LICENSE  Makefile  README.md  build.rs  goodfile  rust-toolchain  todo_notes
data/: generate_opcode.py  x86_64.json
ffi/: Cargo.toml  README.md
ffi/.cargo/: config
ffi/long_mode/: Cargo.toml
ffi/multiarch/: Cargo.toml
ffi/multiarch/src/: lib.rs  long_mode.rs  protected_mode.rs
ffi/protected_mode/: Cargo.toml
ffi/protected_mode/src/: lib.rs
ffi/real_mode/: Cargo.toml
ffi/real_mode/src/: lib.rs
ffi/src/: lib.rs  long_mode.rs  protected_mode.rs  real_mode.rs  write_sink.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: decode_does_not_panic.rs  display_c_does_not_panic.rs  display_does_not_panic.rs  does_not_decode_invalid_registers.rs  small_reg_is_always_old_bank_if_possible.rs
src/: display.rs  lib.rs  safer_unchecked.rs  vex.rs  vex_ops
src/generic/: display.rs  mod.rs
src/long_mode/: display.rs  evex.rs  mod.rs  uarch.rs  vex.rs
src/protected_mode/: display.rs  evex.rs  mod.rs  uarch.rs  vex.rs
src/real_mode/: display.rs  evex.rs  mod.rs  uarch.rs  vex.rs
src/shared/: evex.in  generated_evex.in
test/: bench.rs  regspec.rs  test.rs
test/long_mode/: descriptions.rs  display.rs  evex_generated.rs  mod.rs  opcode.rs  operand.rs  regspec.rs  reuse_test.rs
test/protected_mode/: display.rs  evex_generated.rs  mod.rs  opcode.rs  operand.rs  regspec.rs
test/real_mode/: mod.rs  opcode.rs  operand.rs
