[package]

name = "yaxpeax-x86"
version = "0.0.1"
authors = [ "iximeow <me@iximeow.net>" ]
license = "0BSD"
repository = "http://git.iximeow.net/yaxpeax-x86/"
description = "x86 decoders for the yaxpeax project"

[dependencies]
yaxpeax-arch = { path = "../../yaxpeax-arch", default-features = false, features = []}
"num-traits" = "0.2"
"termion" = "1.4.0"
"serde" = "1.0"
"serde_json" = "1.0"
"serde_derive" = "1.0"

[[test]]
name = "test"
path = "test/test.rs"

[[bench]]
name = "bench"
path = "test/bench.rs"

[profile.bench]
opt-level = 3
lto = true

[profile.release]
opt-level = 3
lto = true

[features]
default = ["std", "colors", "use-serde"]

# opt-in for some apis that are really much nicer with String
std = []

use-serde = ["yaxpeax-arch/use-serde"]

colors = ["yaxpeax-arch/colors"]

# This enables some capstone benchmarks over the same
# instruction bytes used to bench this code.
capstone_bench = []
