[package]

name = "yaxpeax-x86"
version = "1.2.0"
authors = [ "iximeow <me@iximeow.net>" ]
license = "0BSD"
repository = "http://git.iximeow.net/yaxpeax-x86/"
description = "x86 decoders for the yaxpeax project"
readme = "README.md"
edition = "2018"

[dependencies]
yaxpeax-arch = { version = "0.2.7", default-features = false, features = [] }
"num-traits" = { version = "0.2", default-features = false }
"serde" = { version = "1.0", optional = true }
"serde_json" = { version = "1.0", optional = true }
"serde_derive" = { version = "1.0", optional = true }
"cfg-if" = "1.0.0"

[dev-dependencies]
rand = "0.8.4"

[[test]]
name = "test"
path = "test/test.rs"

[[bench]]
name = "bench"
path = "test/bench.rs"

[profile.bench]
opt-level = 3
lto = true

[profile.release]
opt-level = 3
lto = true

[features]
default = ["std", "colors", "use-serde", "fmt"]

# opt-in for some apis that are really much nicer with String
std = ["yaxpeax-arch/std"]

# feature for formatting instructions and their components
fmt = []

use-serde = ["yaxpeax-arch/use-serde", "serde", "serde_derive"]

colors = ["yaxpeax-arch/colors"]

# This enables some capstone benchmarks over the same
# instruction bytes used to bench this code.
capstone_bench = []
