[package]
name = "yaxpeax_x86_ffi_long_mode"
version = "0.1.0"
authors = ["iximeow <me@iximeow.net>"]
edition = "2018"

[dependencies]
yaxpeax-x86 = { path = "../../", default-features = false }
yaxpeax-arch = { version = "0.1.0", default-features = false }

[lib]
name = "yaxpeax_x86_ffi_long_mode"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib"]

[features]
default = ["fmt"]

fmt = ["yaxpeax-x86/fmt"]
