[package]
name = "yaxpeax_x86_ffi_real_mode"
version = "0.0.2"
authors = ["iximeow <me@iximeow.net>"]
edition = "2018"

[dependencies]
yaxpeax-x86 = { path = "../../", default-features = false }
yaxpeax-arch = { version = "0.0.4", default-features = false }

[lib]
name = "yaxpeax_x86_ffi_real_mode"
path = "src/lib.rs"
crate-type = ["staticlib"]
